--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "disqus-react": "^1.1.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.471.1",
     "marked": "^11.1.1",
     "next": "14.1.0",
     "next-mdx-remote": "^4.4.1",
