--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@hubspot/api-client": "^12.0.1",
     "aos": "^3.0.0-beta.6",
     "date-fns": "^3.3.0",
     "disqus-react": "^1.1.5",
+    "formik": "^2.4.6",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.471.1",
@@ -35,7 +37,8 @@
     "react-lite-youtube-embed": "^2.4.0",
     "react-visibility-sensor": "^5.1.1",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
