--- a/src/config/config.json
+++ b/src/config/config.json
@@ -21,7 +21,7 @@
 
   "params": {
     "contact_form_action": "#",
-    "copyright": "2023 Design and Developed by [Themefisher](https://themefisher.com/)"
+    "copyright": "2025 Citizen Media Inc."
   },
 
 
